Updated post: pointers

--- a/_posts/2023-03-10-pointers.md
+++ b/_posts/2023-03-10-pointers.md
@@ -94,7 +94,6 @@ int** arr2D = makeArr2D;
 ```
 
 
-
 # Call by Value or Reference
 
 So, the major difference b/w `class` and `struct` in C# is:
@@ -108,3 +107,21 @@ Now this is very important as we need to differentiate whether
 we're doing shallow copy or not, especially when we want to edit the copy.
 
 (This is why I often make `Clone(this type self)` function to ensure Deep Copy)
+
+
+# Books
+
+I bought these for now:
+
+![Books](/images/0310-Cap_2023-03-09_14-47-39-636.png)
+
+My method of studying algorithms is mostly Baekjoon
+and googling Baekjoon whenever I encounter new tags.
+
+Also Refactoring. I'm intriguied.
+
+The way I usually do that is: do exception handling first.
+This reduces layers of indents.
+
+Those are bought from an used book market so it'll take a week
+or two to arrive.
