New post - stack

--- a/_posts/2023-03-10-pointers.md
+++ b/_posts/2023-03-10-pointers.md
@@ -118,7 +118,7 @@ I bought these for now:
 My method of studying algorithms is mostly Baekjoon
 and googling Baekjoon whenever I encounter new tags.
 
-Also Refactoring. I'm intriguied.
+Also Refactoring. I'm intrigued.
 
 The way I usually do that is: do exception handling first.
 This reduces layers of indents.
