--- a/_posts/2023-03-11-9328-keys.md
+++ b/_posts/2023-03-11-9328-keys.md
@@ -62,7 +62,7 @@ NOT the way I usually code.
 
 However, for the reference, the naming scheme I use for problem solving is:
 
- * Capital letter for const, readonly input, major variables including output
+ * Capital letter for `const`, `readonly` input, major variables including output
  * Lower letter for local variables
  * The alphabet is either specified by the problem, or the first letter of its function/type
 
@@ -78,7 +78,7 @@ int P = 0; // points: output
 ```
 
 Now I add Queue of next position to check, for BFS.
-Then added array of Stacks where to store "visitable but locked doors found so far".
+Then added array of Stacks where to store "encountered but locked doors found so far".
 That'll definitely cost memories, but in return we get time saves.
 
 Finally, the points collected so far for the output.
@@ -122,7 +122,7 @@ If not, add that to the pending door stack for now.
 So how that will be used?
 
 
-## BFS itself
+### BFS itself
 
 It is standard 2D BFS except collecting item part.
 
